[gd_scene load_steps=7 format=2]

[ext_resource path="res://imported_assets/computer/question-mark-2d.png" type="Texture" id=1]
[ext_resource path="res://ActionLevels/Room/ChatTextEdit.gd" type="Script" id=2]
[ext_resource path="res://ActionLevels/Room/ChatBox/ChatBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Themes/Classic95/Classic95.tres" type="Theme" id=4]
[ext_resource path="res://ActionLevels/Room/ChatApp.gd" type="Script" id=5]
[ext_resource path="res://ActionLevels/Room/SendMessageButton.gd" type="Script" id=6]

[node name="ChatApp" type="WindowDialog"]
unique_name_in_owner = true
anchor_left = 0.182292
anchor_top = 0.239815
anchor_right = 0.552083
anchor_bottom = 0.797222
theme = ExtResource( 4 )
window_title = "BSN"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Receiver" type="Panel" parent="."]
anchor_left = 0.649297
anchor_top = 0.0299004
anchor_right = 0.9831
anchor_bottom = 0.4402
margin_right = -4.0
margin_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReceiverProfile" type="TextureRect" parent="Receiver"]
margin_right = 233.0
margin_bottom = 230.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sender" type="Panel" parent="."]
anchor_left = 0.653522
anchor_top = 0.475083
anchor_right = 0.981692
anchor_bottom = 0.862127
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SenderProfile" type="TextureRect" parent="Sender"]
anchor_top = 0.008
anchor_right = 1.0
anchor_bottom = 0.992
margin_bottom = 0.727997
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Dialog" type="Panel" parent="."]
anchor_left = 0.0633803
anchor_top = 0.0299003
anchor_right = 0.535211
anchor_bottom = 0.656146
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChatBox" parent="Dialog" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_left = 7.0
margin_top = 11.0
margin_right = -10.0
margin_bottom = -6.0

[node name="ChatBoxPanel" type="Panel" parent="."]
anchor_left = 0.0633803
anchor_top = 0.687708
anchor_right = 0.535211
anchor_bottom = 0.906977
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ChatTextSender" type="TextEdit" parent="ChatBoxPanel"]
unique_name_in_owner = true
anchor_right = 0.997017
anchor_bottom = 0.992426
text = "Yo yo it's your boy original and funny joke man back at it again."
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
wrap_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SendMessageButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 386.999
margin_top = 448.0
margin_right = 454.999
margin_bottom = 491.0
text = "Send"
script = ExtResource( 6 )

[connection signal="button_up" from="SendMessageButton" to="SendMessageButton" method="_on_SendMessageButton_button_up"]
